# eth_address_review

./: .gitignore  01-EDA.ipynb  pyproject.toml  tx_ledger.csv
data/: ETH_2019.csv  ETH_2020.csv  ETH_2020_h1.csv  ETH_2020_h2.csv  ETH_2021.csv  ETH_2022.csv  ETH_2023.csv
data/cache/: account_token1155tx.pkl  account_tokennfttx.pkl  account_tokentx.pkl  account_txlist.pkl  account_txlistinternal.pkl
src/: etherscan_data.py  transactions.py
